<?php
namespace Inutcin\HyppoEngine\DTO;

use Inutcin\HyppoEngine\DTO as AbstractDTO;

class SyntaxTree
{
    protected array $branches = [];
    protected array $leaves = [];
}



