<?php
namespace Inutcin\HyppoEngine\Exception;

use Inutcin\HyppoEngine\Exception as AbstractException;

class Parser extends AbstractException
{
    protected $code = 20000;
}

