<?php
namespace Inutcin\HyppoEngine\Exception;

use Inutcin\HyppoEngine\Exception as AbstractException;

class Repository extends AbstractException
{
    protected $code = 40000;
}

