<?php
namespace Inutcin\HyppoEngine;

abstract class Render
{
    use Trait\Pattern\Factory;

}

