@startuml "hyppo-engine-classes"

class DTO {
}
package DTO\ {
    package DTO\Document\ {
        class DTO\Document\Author {
        }
    }
    class DTO\Document {
    }
    class DTO\RepositoryNode {
    }
    class DTO\SyntaTree {
    }
}
DTO <|.. DTO\Document\Author 
DTO <|.. DTO\Document
DTO <|.. DTO\RepositoryNode


class Document {
}
package HyppoEngine\Document {
    class HyppoEngine\Document\Article {
    }
}

class Exception {
}
package HyppoEngine\Exception {
    class HyppoEngine\Exception\AccessDenied {
    }
    class HyppoEngine\Exception\FileNotFound {
    }
    class HyppoEngine\Exception\ParserNotExists {
    }
    class HyppoEngine\Exception\RenderNotExists {
    }
    class HyppoEngine\Exception\RepositoryError {
    }
    class HyppoEngine\Exception\RepositoryNotExists {
    }
    class HyppoEngine\Exception\SyntaxTreeNotExists {
    }
}

class Parser {
}
package HyppoEngine\Parser {
    class HyppoEngine\Parser\Markdown {
    }
}


class Render {
}
package HyppoEngine\Render {
    class HyppoEngine\Render\Html {
    }
}



class Repository {
}
package HyppoEngine\Repository {
    class HyppoEngine\Repository\File {
    }
}

package HyppoEngine\Trait {
    package HyppoEngine\Pattern {
        class HyppoEngine\Pattern\Builder {
            
        }
        class HyppoEngine\Pattern\Factory {
        }
        class HyppoEngine\Pattern\DTO {
        }
        class HyppoEngine\Pattern\Repository {
        }
    }
    class HyppoEngine\Attribute {
    }
}



class SyntaxTree {
}

@enduml
